Tue Jul 26 21:46:16 2005  Arnold D. Robbins  <arnold@skeeve.com>

	* Release 3.1.5: Release tar file made.

Mon Aug  2 12:18:15 2004   Arnold D. Robbins    <arnold@skeeve.com>

	* Release 3.1.4: Release tar file made.

Mon Jul  7 11:01:43 2003  Arnold D. Robbins  <arnold@skeeve.com>

	* Release 3.1.3: Release tar file made.

Sun May 25 16:23:43 2003  Corinna Vinschen  <vinschen@redhat.com>

	* gawkmisc.c (cygwin_premain0): New function.

Wed Mar 19 14:10:31 2003  Arnold D. Robbins  <arnold@skeeve.com>

	This time for sure.
		-- Bullwinkle

	* Release 3.1.2: Release tar file made.

Tue Feb  4 14:28:06 2003  Arnold D. Robbins  <arnold@skeeve.com>

	All relevant files: Copyright year updated to 2003.

Tue Dec 17 11:05:11 2002  Arnold D. Robbins  <arnold@skeeve.com>

	* gawkmisc.c (optimal_bufsize): Stat the file first, so that
	stb is always valid for higher level code.

Thu Nov 28 10:20:05 2002  Arnold D. Robbins  <arnold@skeeve.com>

	* gawkmisc.c (optimal_bufsize): Enhance to use AWKBUFSIZE
	environment variable for debugging.

Tue Jun 11 22:18:42 2002  Stepan Kasal  <kasal@math.cas.cz>

	* gawkmisc.c (DEFBLKSIZE): Add check for st_blksize > 0,
	fixes weird bug on some versions of HP-UX.

Wed May  1 16:41:32 2002  Arnold D. Robbins  <arnold@skeeve.com>

	* Release 3.1.1: Release tar file made.

Tue Sep 25 15:19:53 2001  Arnold D. Robbins  <arnold@skeeve.com>

	* gawkmisc.c (os_close_on_exec): If fd <= 2, return.

Sun Jun  3 13:04:44 2001  Arnold D. Robbins  <arnold@skeeve.com>

	* Release 3.1.0: Release tar file made.  And there was
	  rejoicing.

Sun Jan 28 15:50:02 2001  Eli Zaretskii  <eliz@is.elta.co.il>

	* gawkmisc.c (os_restore_mode): New function.

Sun Dec  3 16:53:37 2000  Arnold D. Robbins  <arnold@skeeve.com>

	* gawkmisc.c (os_setbinmode): New function.

Tue Nov 14 16:13:08 2000  Arnold D. Robbins  <arnold@skeeve.com>

	* gawkmisc.c: Remove all includes.  Done by ../gawkmisc.c.

Tue Nov  7 14:09:14 2000  Arnold D. Robbins  <arnold@skeeve.com>
