@@ -1,3 +1,14 @@
+Sun Apr  2 21:43:02 2006  Corinna Vinschen  <vinschen@redhat.com>
+
+	* gawkmisc.c (os_setbinmode): Call `setmode' for Cygwin.
+	(cygwin_premain0, cygwin_premain2): Change type of `myself'
+	parameter to `void *'.
+
+Sun Mar 12 22:45:11 2006  Corinna Vinschen  <vinschen@redhat.com>
+
+	* gawkmisc.c (cygwin_premain2): New function.
+	Fixes CR-LF problem with already open stdin.
+
 Tue Jul 26 21:46:16 2005  Arnold D. Robbins  <arnold@skeeve.com>
 
 	* Release 3.1.5: Release tar file made.
